# internal/app/server.go
@@ -4,8 +4,8 @@ import (
 	"fmt"
 	"log"
 
-	"github.com/SicParv1sMagna/AtomHackMarsService/docs"
-	"github.com/SicParv1sMagna/AtomHackMarsService/internal/app/middleware"
+	"github.com/certified-juniors/AtomHackEarthBackend/docs"
+	"github.com/certified-juniors/AtomHackEarthBackend/internal/app/middleware"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -15,10 +15,10 @@ import (
 func (app *Application) Run() {
 	r := gin.Default()
 
-	docs.SwaggerInfo.Title = "AtomHackMarsBackend RestAPI"
-	docs.SwaggerInfo.Description = "API server for Mars application"
+	docs.SwaggerInfo.Title = "AtomHackEarthBackend RestAPI"
+	docs.SwaggerInfo.Description = "API server for Earth application"
 	docs.SwaggerInfo.Version = "1.0"
-	docs.SwaggerInfo.Host = "localhost:8080"
+	docs.SwaggerInfo.Host = "localhost:8081"
 	docs.SwaggerInfo.BasePath = "/api/v1"
 
 	r.Use(middleware.CorsMiddleware())
@@ -26,24 +26,10 @@ func (app *Application) Run() {
 	ApiGroup := r.Group("/api/v1")
 	{
 		DocumentGroup := ApiGroup.Group("/document")
-		{
-			DocumentGroup.POST("/", app.handler.CreateDocument)
-			DocumentGroup.POST("/:docID", app.handler.SendDocument)
-			DocumentGroup.GET("/:docID", app.handler.GetDocumentByID)
-			DocumentGroup.PUT("/:docID", app.handler.UpdateDocument)
-			DocumentGroup.DELETE("/:docID", app.handler.DeleteDocument)
-			DocumentGroup.POST("/:docID/file", app.handler.UploadFile)
-			DocumentGroup.DELETE("/:docID/file/:fileID", app.handler.DeleteFile)
-
-		}
-	}
-
-	WebSocketGroup := r.Group("/ws/v1")
-	{
-		DocumentGroup := WebSocketGroup.Group("/document")
-		{
-			DocumentGroup.GET("/draft", app.handler.GetDraftDocuments)
+		{	
 			DocumentGroup.GET("/formed", app.handler.GetFormedDocuments)
+			DocumentGroup.GET("/:docID", app.handler.GetDocumentByID)
+			DocumentGroup.POST("/", app.handler.AcceptDocument)
 		}
 	}
 
